...
    <string name="ui_loading_error_title">Oops! 😵</string>
    <string name="ui_loading_error_retry">Try Again</string>
    <string name="ui_loading_no_results_title">No matches found 🕵️‍♀️</string>
    <string name="ui_loading_no_results_message">Try different emoji or keywords for \"%1$s\"</string>
    <string name="ui_loading_no_results_clear">Clear Search</string>
    <string name="ui_search_placeholder">Search memes…</string>
    <string name="ui_search_icon_description">Search</string>
    <string name="ui_search_clear_description">Clear search</string>
    <string name="ui_section_header_see_all">See all</string>
    <string name="ui_quick_access_title">Quick Access</string>
    <string name="ui_quick_access_settings">Quick Access settings</string>
    <string name="ui_quick_access_item_description">%1$s, sticker. Tap to share, hold for instant share</string>
    <string name="ui_hold_to_share_progress">Hold to share, %1$d percent</string>
    <string name="ui_hold_to_share_action">Share</string>
...
